--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "socket-io": "^1.0.0"
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "faucet": "0.0.1",
