--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.15.2",
+    "require-dir": "^0.3.1",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
