--- a/package.json
+++ b/package.json
@@ -5,16 +5,33 @@
   "main": "src/server.js",
   "license": "Apache",
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "babel-node ./src/server.js",
     "test": "faucet"
   },
   "dependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-preset-es2015-node": "^6.1.1",
     "express": "^4.15.2",
     "require-dir": "^0.3.1",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.1",
+    "eslint": "^3.19.0",
     "faucet": "0.0.1",
     "tape": "^4.6.3"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "env": {
+      "es6": true,
+      "commonjs": true,
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "modules": true
+      }
+    }
   }
 }
